Funcion de regar

--- a/GUI/style.css
+++ b/GUI/style.css
@@ -7,133 +7,7 @@
     left: 100px; /* Ajusta esto si quieres que esté centrado o a la derecha */
     z-index: 110;
 }
-#cuadrado1 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado2 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado3 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado4 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado5 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado6 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado7 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado8 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado9 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado10 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado11 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado12 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado13 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado14 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado15 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado16 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado17 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado18 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado19 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado20 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado21 {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    z-index: 120; /* Asegura que los cuadrados estén por encima de otros elementos */
-}
-#cuadrado22 {
+.cuadrado {
     width: 100px;
     height: 100px;
     background-color: red;
